# ipycombobox

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  appveyor.yml  codecov.yml  ipydatalist.json  package-lock.json  package.json  pytest.ini  setup.cfg  setup.py  webpack.config.js
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
ipycombobox/: __init__.py  _frontend.py  _version.py  combobox.py
ipycombobox/nbextension/: __init__.py
ipycombobox/nbextension/static/: extension.js
ipycombobox/tests/: test_combobox.py  test_example.py
ipydatalist/: _frontend.py  example.py
ipydatalist/nbextension/: __init__.py
ipydatalist/nbextension/static/: extension.js
ipydatalist/tests/: test_nbextension_path.py
js/: package-lock.json  package.json  webpack.config.js
js/docs/source/_static/: embed-bundle.js  embed-bundle.js.map
js/ipycombobox/labextension/: jupyter-combobox-0.1.0.tgz
js/ipycombobox/nbextension/static/: index.js  index.js.map
js/src/: widget.ts
js/tests/src/: index.spec.ts
src/: extension.ts  plugin.ts  widget.ts
styles/: index.css
