[bdist_wheel]
universal=1

[metadata]
description-file = README.md 
license_file = LICENSE.txt

[manifix]
known_excludes =
    .git/**
    .git*
    readthedocs.yml
    environment.yml
    .pytest_cache
    .travis.yml
    appveyor.yml
    codecov.yml
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    js/coverage/**/*
    js/lib/**/*
    js/dist/**/*
